--- a/idlerpg/package.json
+++ b/idlerpg/package.json
@@ -11,12 +11,11 @@
   "license": "MIT",
   "devDependencies": {
     "solid-devtools": "^0.29.2",
+    "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
-    "solid-js": "^1.8.11",
-    "solid-styled-components": "^0.28.5",
-    "typescript": "^5.4.4"
+    "solid-js": "^1.8.11"
   }
 }
